clusters/beryjuio-home/unifi-controller/exporter-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: unifi-exporter
    app.kubernetes.io/instance: main
  name: unifi-exporter
  namespace: unifi-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-exporter
      app.kubernetes.io/instance: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-exporter
        app.kubernetes.io/instance: main
    spec:
      containers:
        - name: poller
          image: ghcr.io/unpoller/unpoller:v5.5.1
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9130
              name: metrics
