clusters/beryjuio-home/unifi-controller/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: unifi-controller
    app.kubernetes.io/instance: main
  name: unifi-controller
  namespace: unifi-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi-controller
      app.kubernetes.io/instance: main
  serviceName: "unifi-controller"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi-controller
        app.kubernetes.io/instance: main
    spec:
      hostname: unifi-controller
      containers:
        - name: unifi-controller
          image: ghcr.io/linuxserver/unifi-network-application:10.3.58
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
              name: http
            - containerPort: 8443
              protocol: TCP
              name: https
            - containerPort: 8843
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: unifi-controller
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 10Gi
        accessModes:
          - ReadWriteOnce
