clusters/beryjuio-home/unifi-controller/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: unifi-controller
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryjuio-unifi-controller
      hosts:
        - unifi-controller.${CLUSTER_NAME}.k8s.beryju.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - unifi-controller.${CLUSTER_NAME}.k8s.beryju.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: beryju-io-dr-unifi-controller
  namespace: istio-system
spec:
  host: unifi-controller.unifi-controller.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-unifi-controller
  namespace: istio-system
spec:
  gateways:
    - unifi-controller
  hosts:
    - unifi-controller.${CLUSTER_NAME}.k8s.beryju.io
  http:
    - route:
        - destination:
            host: unifi-controller.unifi-controller.svc.cluster.local
            port:
              number: 8443
          weight: 100
